[54] fixed text wrapping in acs history

--- a/src/styling/Profile.css
+++ b/src/styling/Profile.css
@@ -81,7 +81,7 @@
 
 .prof-edit-profile button {
   font-size: 1vw; 
-  padding: 3% 11%;
+  padding: 8% 14%;
   color: white; 
   background-color: #61b305;
   border-color: transparent;
@@ -97,7 +97,7 @@
 .prof-about-content{ 
   background-color: #747474; 
   font-size: 1vw;
-  height: 13vw; 
+  height: 16vw; 
   word-break:break-all;  
 }
 
@@ -111,7 +111,7 @@
 .prof-radar-list-content button {
   font-size: 1vw;
   align-self: flex-end;
-  padding: 0.5% 5%;
+  padding: 0.5% 3%;
   margin-left: 5%; 
   border-color: white; 
   border-style: solid; 
@@ -166,8 +166,8 @@
   justify-content: center;
   align-items: center;
 
-  width: 5vw;
-  height: 5vw;
+  width: 7vw;
+  height: 7vw;
 
   border-radius: 5%;
   border: 1px solid black;
@@ -181,8 +181,8 @@
   justify-content: center;
   align-items: center;
 
-  width: 5vw;
-  height: 5vw;
+  width: 7vw;
+  height: 7vw;
 
   border-radius: 5%;
   border: 1px solid black;
@@ -191,7 +191,7 @@
 }
 
 .prof-interest-content .imageselect-image {
-  max-height: 4vw;
+  max-height: 6vw;
 }
 
 .prof-picks {
@@ -200,13 +200,14 @@
 
 
 /*********************STYLES FOR ACS HISTORY*********************/
+
 .prof-piechart {
-  padding-left: 2% ; 
-  padding-right: 10%; 
+  padding-left: 0% ; 
+  padding-right: 0%; 
   padding-top: 2%; 
   padding-bottom: 2%;
+  width: 25%; 
   height: 25%;
-  width: 25%;
 }
 .prof-acs-content {
   background-color: #747474;
@@ -214,13 +215,18 @@
   display: flex;
 
 }
-.prof-acs-content td {
-  padding: 1% 3%; 
-  font-size: 1.2vw; 
+.prof-acs-content table { 
+  margin-left: 6%; 
+  height: 17vw; 
+  
 }
-.prof-acs-content th {
 
+.prof-acs-content td {
   font-size: 1.2vw;
+  margin-left: 10px;
+  padding-left: 1.5em; 
+  border-spacing: 4% 0%;
+
 }
 .prof-score-content-pos { 
   color:#61b305;
